Fix top banner and product partial button on mobile + graphing

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -176,6 +176,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 1.2em;
 }
 
+.btn-wrap-text {
+  white-space: normal;
+}
+
 
 
 /* background colours */
